<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe"
    android:background="#333333"
    android:fitsSystemWindows="true" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
	
	
    <LinearLayout 
    android:orientation="vertical" 
    android:id="@+id/fullscreen_content" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
	    	    
	    <LinearLayout 
	    android:orientation="vertical" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	   	android:paddingRight="5dp"
	    android:paddingLeft="5dp"
	    android:background="#222222">

		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/recipe_name"
		    android:textColor="#d0d0d0"
		    android:textSize="18sp"
		    android:textStyle="bold"/>
		
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/recipe_desc"
		    android:textColor="#909090"
		    android:textSize="12sp"
		    android:textStyle="italic"/>
	</LinearLayout>
	
	<ImageView 
	android:paddingRight="5dp"
	android:paddingLeft="5dp"
	android:layout_width="match_parent"
	android:layout_height="200dp"
	android:src="@drawable/punjabirajma"	
	android:scaleType="fitCenter"	    
	/>
		
    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="5dp"
    	android:paddingLeft="5dp"
	    android:text="@string/ingredients_title"
	    android:textColor="#909090"
	    android:background="#222222"
	    android:textSize="12sp"/>
    
     <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="5dp"
    	android:paddingLeft="5dp"
	    android:text="@string/ingredients_text"
	    android:textColor="#909090"
	    android:textSize="12sp"/>
     
     <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="5dp"
    	android:paddingLeft="5dp"
	    android:text="@string/instructions_title"
	    android:textColor="#909090"
	    android:background="#222222"
	    android:textSize="12sp"/>
    
     <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="5dp"
    	android:paddingLeft="5dp"
	    android:text="@string/instructions_text"
	    android:textColor="#909090"
	    android:textSize="12sp"/> 
	
</LinearLayout>

</ScrollView>
